--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "crossfit-wod-api",
-	"version": "1.5.0",
+	"version": "1.6.0",
 	"description": "Crossfit Work Of Day REST API from freeCodeCamp",
 	"main": "index.js",
 	"scripts": {
@@ -13,6 +13,7 @@
 		"nodemon": "^3.0.1"
 	},
 	"dependencies": {
+		"apicache": "^1.6.3",
 		"express": "4.18.2"
 	}
 }
