--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "crossfit-wod-api",
-	"version": "1.6.0",
+	"version": "1.7.0",
 	"description": "Crossfit Work Of Day REST API from freeCodeCamp",
 	"main": "index.js",
 	"scripts": {
@@ -14,6 +14,8 @@
 	},
 	"dependencies": {
 		"apicache": "^1.6.3",
-		"express": "4.18.2"
+		"dotenv": "^16.3.1",
+		"express": "4.18.2",
+		"jsonwebtoken": "^9.0.2"
 	}
 }
