--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "crossfit-wod-api",
-	"version": "1.8.0",
+	"version": "1.9.0",
 	"description": "Crossfit Work Of Day REST API from freeCodeCamp",
 	"main": "index.js",
 	"scripts": {
@@ -17,6 +17,8 @@
 		"dotenv": "^16.3.1",
 		"express": "4.18.2",
 		"express-validator": "^7.0.1",
-		"jsonwebtoken": "^9.0.2"
+		"jsonwebtoken": "^9.0.2",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^5.0.0"
 	}
 }
