--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"dependencies": {
 		"apicache": "^1.6.3",
+		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "4.18.2",
 		"express-validator": "^7.0.1",
